--- a/index.html
+++ b/index.html
@@ -158,37 +158,37 @@
         var uniformity = {
             type: jsPsychHtmlButtonResponse,
             stimulus: `
-    <div style="width:100%; display:flex; justify-content:center; align-items: flex-start; height: auto; flex-direction: column; margin-top: 80px; margin-bottom: 50px;">
-        
-        <!-- Centered Header Text -->
-        <div style="width:1200px; text-align:left; font-size:24px; margin-top:-250px; margin-left: 80px;">
-            During this experiment, you will be presented with images of textures.
-        </div>
+        <div style="width:100%; display:flex; justify-content:center; align-items: flex-start; height: auto; flex-direction: column; margin-top: 80px; margin-bottom: 50px;">
 
-        <!-- First Row: Uniform Textures -->
-        <div style="width:1200px; text-align:left; font-size:24px; margin-top: 50px; margin-bottom: 10px;">
-            <div style="display: flex; justify-content: flex-start; align-items: center;">
-                <span style="width:45%; margin-left: 80px; margin-right: 20px;">
-                    Some of the textures will appear very 'uniform,' which means they appear similar across the whole image. 
-                    The textures to the right are examples of very uniform texture.
-                </span>
-                <img src="uniform_ex.png" alt="Uniform Texture" style="width:200px; height:auto; margin-left:120px; margin-right: 20px;">
-                <img src="uniform_ex2.png" alt="New Uniform Texture" style="width:200px; height:auto; margin-left:50px;">
+            <!-- Centered Header Text -->
+            <div style="width:1200px; text-align:left; font-size:24px; margin-top:-250px; margin-left: 80px;">
+                During this experiment, you will be presented with images of textures.
             </div>
-        </div>
 
-        <!-- Second Row: Non-Uniform Textures -->
-        <div style="width:1200px; text-align:left; font-size:24px; margin-top: 50px; margin-bottom: 10px;">
-            <div style="display: flex; justify-content: flex-start; align-items: center;">
-                <span style="width:45%; margin-left: 80px; margin-right: 20px;">
-                    Some of the textures will appear very 'non-uniform,' which means they look different in different parts of the image. 
-                    The textures to the right are examples of very non-uniform textures.
-                </span>
-                <img src="not_uniform_ex.png" alt="Non-Uniform Texture" style="width:200px; height:auto; margin-left:120px; margin-right: 20px;">
-                <img src="not_uniform_ex2.png" alt="New Non-Uniform Texture" style="width:200px; height:auto; margin-left:50px;">
+            <!-- First Row: Uniform Textures -->
+            <div style="width:1200px; text-align:left; font-size:24px; margin-top: 50px; margin-bottom: 10px;">
+                <div style="display: flex; justify-content: flex-start; align-items: center;">
+                    <span style="width:45%; margin-left: 80px; margin-right: 20px;">
+                        Some of the textures will appear very 'uniform,' which means they appear similar across the whole image. 
+                        The textures to the right are examples of very uniform texture.
+                    </span>
+                    <img src="uniform_ex.png" alt="Uniform Texture" style="width:200px; height:auto; margin-left:120px; margin-right: 20px;">
+                    <img src="uniform_ex2.png" alt="New Uniform Texture" style="width:200px; height:auto; margin-left:50px;">
+                </div>
             </div>
-            </div>
-    `,
+
+            <!-- Second Row: Non-Uniform Textures -->
+            <div style="width:1200px; text-align:left; font-size:24px; margin-top: 50px; margin-bottom: 10px;">
+                <div style="display: flex; justify-content: flex-start; align-items: center;">
+                    <span style="width:45%; margin-left: 80px; margin-right: 20px;">
+                        Some of the textures will appear very 'non-uniform,' which means they look different in different parts of the image. 
+                        The textures to the right are examples of very non-uniform textures.
+                    </span>
+                    <img src="not_uniform_ex.png" alt="Non-Uniform Texture" style="width:200px; height:auto; margin-left:120px; margin-right: 20px;">
+                    <img src="not_uniform_ex2.png" alt="New Non-Uniform Texture" style="width:200px; height:auto; margin-left:50px;">
+                </div>
+                </div>
+        `,
             choices: ['Continue'],
         }
 
@@ -198,27 +198,27 @@
         var instructions = {
             type: jsPsychHtmlSliderResponse,
             stimulus: `
-            <div style='text-align:left; height: auto; margin-left=-100px; margin-bottom: -20px; font-size:20px; line-height:25px; width: 1200px;'>
-                <br>During this experiment, you will see a series of textures, one at a time, like the ones below. 
-            </div>
-                <br>
-                <br>
-                <img src="anchoring_visual_textures2.png" alt="img" style="max-width:1200px; margin-left: -10px;">
-            </div>
-            <div style="clear: both;"></div>
-            </div>
-                <div style='text-align:left; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px; margin-top: -50px;'>
-                <br> Your task is to rate how uniform the texture appears on a scale from 'not at all uniform' to 'very much uniform,' like the one below.
-                <br><br> So you know what 'very much uniform' and 'not at all uniform' means to you in the context of these textures, please think about which textures below you consider 'very much uniform,' and which textures below you consider 'not at all uniform.'
-                <br><br>When you see a texture during the experiment that you consider 'very much uniform', please rate it near the 'very much uniform' endpoint of the
-                scale.<br><br> When you see a texture during the experiment that you consider 'not at all uniform', please rate it near the 'not at all uniform' endpoint
-                of the scale.<br><br>
-                Please use the full range of the scale. That is, if an texture is somewhat uniform, you would
-                click partway between the middle point and right side of the scale.\
-                You will be asked to rate each texture on its uniformity.<br><br>Press the
-                'Continue' button for instructions on how to use the slider.\
-                 <br><br>
-            `,
+                <div style='text-align:left; height: auto; margin-left=-100px; margin-bottom: -20px; font-size:20px; line-height:25px; width: 1200px;'>
+                    <br>During this experiment, you will see a series of textures, one at a time, like the ones below. 
+                </div>
+                    <br>
+                    <br>
+                    <img src="anchoring_visual_textures2.png" alt="img" style="max-width:1200px; margin-left: -10px;">
+                </div>
+                <div style="clear: both;"></div>
+                </div>
+                    <div style='text-align:left; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px; margin-top: -50px;'>
+                    <br> Your task is to rate how uniform the texture appears on a scale from 'not at all uniform' to 'very much uniform,' like the one below.
+                    <br><br> So you know what 'very much uniform' and 'not at all uniform' means to you in the context of these textures, please think about which textures below you consider 'very much uniform,' and which textures below you consider 'not at all uniform.'
+                    <br><br>When you see a texture during the experiment that you consider 'very much uniform', please rate it near the 'very much uniform' endpoint of the
+                    scale.<br><br> When you see a texture during the experiment that you consider 'not at all uniform', please rate it near the 'not at all uniform' endpoint
+                    of the scale.<br><br>
+                    Please use the full range of the scale. That is, if an texture is somewhat uniform, you would
+                    click partway between the middle point and right side of the scale.\
+                    You will be asked to rate each texture on its uniformity.<br><br>Press the
+                    'Continue' button for instructions on how to use the slider.\
+                     <br><br>
+                `,
             labels: ['Not at all <br> uniform', 'Very much <br> uniform'],
             require_movement: false,
             step: 1,
@@ -241,9 +241,9 @@
         var slider_instructions = {
             type: jsPsychHtmlButtonResponse,
             stimulus: `<div style="width:1200px; margin-top:-150px;"><p style="text-align:center; font-size:24px;">To move the slider, click and drag your cursor to the location of the scale where you would like to make your rating and then let go. <br><br> When you let go of the slider, your response will be recorded and the next trial will begin. <br><br><br>
-            We are interested in your initial impressions of each image's uniformity, so please go with your first intuition. <br><br>
-            Before you begin the experiment, there will be four training trials for you to practice using the scale. <br><br><br><br></div>
-            <div style="width:1200px;"><p style="text-align:center; font-size:20px;">When you are ready to start the training trials, please click "Continue".</p></div>`,
+                We are interested in your initial impressions of each image's uniformity, so please go with your first intuition. <br><br>
+                Before you begin the experiment, there will be four training trials for you to practice using the scale. <br><br><br><br></div>
+                <div style="width:1200px;"><p style="text-align:center; font-size:20px;">When you are ready to start the training trials, please click "Continue".</p></div>`,
             choices: ['Continue']
         }
 
@@ -269,10 +269,10 @@
             var rating_trial = {
                 type: jsPsychHtmlSliderResponse,
                 stimulus: `<div style="width:500px;">
-                            <p style="font-size:25px;">${task}</p>
+                                <p style="font-size:25px;">${task}</p>
 
-                            </div>
-                        </div>`,
+                                </div>
+                            </div>`,
                 labels: ['Not at all <br> uniform', 'Very much <br> uniform'],
                 // slider_width: 500,
                 require_movement: false,
@@ -352,7 +352,7 @@
         var practice_complete = {
             type: jsPsychHtmlButtonResponse,
             stimulus: `<div style="width:800px; margin-top:-300px;"><p style="text-align:center; font-size:22px; line-height:25px;""> Great job! You've completed the practice trials.</div>
-                 <div style="width:800px; margin-top:-20px;"><p style="text-align:center"><br><br> In the following trials, you will be asked to rate images on their uniformity one-by-one. <br> You will be given an oprtunities to take breaks when you have completed 25%, 50% and 75% of the trials. <br><br> Please click continue to begin the main task.<br><br><br> </div>`,
+                     <div style="width:800px; margin-top:-20px;"><p style="text-align:center"><br><br> In the following trials, you will be asked to rate images on their uniformity one-by-one. <br> You will be given an oprtunities to take breaks when you have completed 25%, 50% and 75% of the trials. <br><br> Please click continue to begin the main task.<br><br><br> </div>`,
             choices: ['Continue']
         };
         timeline.push(practice_complete);
@@ -381,12 +381,12 @@
             var rating_trial = {
                 type: jsPsychHtmlSliderResponse,
                 stimulus: `<div style="width:500px;">
-                            <p style="font-size:50px; font-weight:bold;"
-                            ></p>
-                            <div style="width:240px; margin: auto;">
-                                <img src="${this_texture}" style= "width:200px"alt="img">
-                            </div>
-                        </div>`,
+                                <p style="font-size:50px; font-weight:bold;"
+                                ></p>
+                                <div style="width:240px; margin: auto;">
+                                    <img src="${this_texture}" style= "width:200px"alt="img">
+                                </div>
+                            </div>`,
                 labels: ['Not at all <br> uniform', 'Very much <br> uniform'],
                 slider_width: 500,
                 require_movement: false,
@@ -425,7 +425,10 @@
             experiment_id: "uiwSce8sNnbJ",
             filename: filename,
             wait_message: 'Please wait a moment while the next page loads.',
-            data_string: () => jsPsych.data.get().csv()
+            data_string: () => jsPsych.data.get().csv(),
+            on_finish: (data) => {
+                console.log("Data saved:", data);
+            }
         };
 
         timeline.push(save_data);
@@ -434,11 +437,11 @@
         var debrief_script = {
             type: jsPsychHtmlButtonResponse,
             stimulus: `
-            <div style='text-align:left; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px;'>"<p>Great Job! You're done rating all textures!<br></br>
+            <div style='text-align:center; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px;'>Great Job! You're done rating all textures!<br></br>
                 <br> The goal of this study is to understand how people form associations between visual textures and concepts.
                 <br> To do this, we need to collect data on how people view the uniformity of textures.
                 <br> Please do not inform other potential participants of the hypotheses in our experiment.
-                <br> Please click 'Next' in order to receive credit through sona.</div>`,
+                <br> Please click 'Next' in order to receive credit through sona. <br><br> </div>`,
             choices: ['Next'],
         };
 
