--- a/index.html
+++ b/index.html
@@ -452,8 +452,9 @@
         var thank_you = {
             type: jsPsychHtmlKeyboardResponse,
             stimulus: `<div style="width:800px"> Thank you!
-                <br><br>Credit for your participation will be appear on SONA in the next few days.`,
-            choices: ['NO_KEYS']
+                <br><br>Credit for your participation will be appear on SONA in the next few days.
+                <br><br> Press any key to exit.`,
+            choices: ['ALL_KEYS']
         }
 
         timeline.push(thank_you);
