exit full screen message

--- a/index.html
+++ b/index.html
@@ -452,9 +452,9 @@
         var thank_you = {
             type: jsPsychHtmlKeyboardResponse,
             stimulus: `<div style="width:800px"> Thank you!
-                <br><br>Credit for your participation will be appear on SONA in the next few days.
-                <br><br> Press any key to exit.`,
-            choices: ['ALL_KEYS']
+                <br><br>Credit for your participation will appear on SONA in the next few days.
+                <br><br> Press any key to exit full screen and end the experiment.`,
+            choices: 'ALL_KEYS'
         }
 
         timeline.push(thank_you);
