--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
         jsPsych.run(timeline, {
             on_finish: function () {
                 // Redirect to Sona's completion URL with the sona_id for credit
-                window.location.assign("https://yourschool.sona-systems.com/webstudy_credit.aspx?experiment_id=123&credit_token=4e48f9b638a&survey_code=" + sona_id);
+                window.location.assign("https://uwmadison.sona-systems.com/webstudy_credit.aspx?experiment_id=2068&credit_token=cf4e10c5713847cfa629b145741790e1&survey_code=" + sona_id);
             }
         }
         );
